basic version ok

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "githubchart"
 version = "0.1.0"
-description = "Add your description here"
+description = "day plotting"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -9,7 +9,13 @@ dependencies = [
     "pandas>=2.2.3",
 ]
 
+[project.optional-dependencies]
+data = [
+    "pandas>=2.2.3",
+]
+
 [dependency-groups]
 dev = [
     "pre-commit>=4.0.1",
+    "pytest>=8.3.4",
 ]
