--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ data = [
 
 [dependency-groups]
 dev = [
+    "coverage>=7.6.10",
     "mkdocs-material>=9.5.50",
     "pre-commit>=4.0.1",
     "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
 ]
