--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,19 @@
 [project]
-name = "githubchart"
+name = "dayplot"
 version = "0.1.0"
-description = "day plotting"
+description = "calendar heatmaps with matplotlib"
+authors = [
+  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
+]
 readme = "README.md"
 requires-python = ">=3.9"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Framework :: Matplotlib"
+]
+
 dependencies = [
     "matplotlib",
 ]
@@ -20,3 +30,11 @@ dev = [
     "pre-commit>=4.0.1",
     "pytest>=8.3.4",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project.urls]
+Homepage = "https://github.com/JosephBARBIERDARNAL/dayplot"
+Issues = "https://github.com/JosephBARBIERDARNAL/dayplot/issues"
