--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,34 @@
 [project]
 name = "dayplot"
-version = "0.2.2"
+version = "0.2.3"
 description = "Calendar heatmaps with matplotlib"
 authors = [
     { name = "Joseph Barbier", email = "joseph.barbierdarnal@gmail.com" },
 ]
 readme = "README.md"
-requires-python = ">=3.9"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Framework :: Matplotlib",
-]
-
+requires-python = ">=3.13"
 dependencies = ["matplotlib"]
 
 [project.optional-dependencies]
 data = ["pandas", "requests"]
 
 [dependency-groups]
-dev = ["mkdocs-material>=9.5.50", "pre-commit>=4.0.1", "pytest>=8.3.4"]
+dev = [
+    "mkdocs-material>=9.6.9",
+    "mkdocs-matplotlib>=0.10.1",
+    "mkdocstrings-python>=1.16.5",
+    "pre-commit>=4.0.1",
+    "pytest>=8.3.4"
+]
+
+[build-system]
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
 
 [project.urls]
 Homepage = "https://github.com/JosephBARBIERDARNAL/dayplot"
 Issues = "https://github.com/JosephBARBIERDARNAL/dayplot/issues"
+
+[tool.setuptools.packages.find]
+where = ["dayplot"]
+
