--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,16 @@ theme:
     repo: fontawesome/brands/github
 
 plugins:
-- search
-- mkdocstrings
+  - mkdocs_matplotlib
+  - search
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          options:
+            show_source: false
+            show_root_heading: true
+            heading_level: 3
 
 nav:
   - Home: index.md
@@ -20,6 +28,7 @@ nav:
   - Reference:
       - reference/calendar.md
       - reference/fetch_github_contrib.md
+      - reference/load_dataset.md
   - Tuto:
     - tuto/basic-styling.md
     - tuto/negative-values.md
@@ -30,7 +39,6 @@ nav:
 
 extra_css:
   - stylesheets/style.css
-
 
 markdown_extensions:
   - pymdownx.tabbed:
@@ -47,6 +55,3 @@ markdown_extensions:
   - pymdownx.blocks.caption
   - admonition
   - pymdownx.details
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
