--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -28,5 +28,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      - run: pip install -e .
       - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python
       - run: mkdocs gh-deploy --force
