try to fix github action

--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -28,6 +28,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install -e .
       - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python
-      - run: mkdocs gh-deploy --force
+      - run: PYTHONPATH=$(pwd) mkdocs gh-deploy --force
