--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ data = ["pandas", "requests"]
 [dependency-groups]
 dev = [
     "dayplot",
+    "dotenv>=0.9.9",
     "mkdocs-material>=9.6.9",
     "mkdocs-matplotlib>=0.10.1",
     "mkdocstrings-python>=1.16.5",
