--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -28,5 +28,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python
+      - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python dotenv
       - run: PYTHONPATH=$(pwd) mkdocs gh-deploy --force
