--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -29,4 +29,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python dotenv
+      - name: Setup Environment
+        run: |
+          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" > .env
       - run: PYTHONPATH=$(pwd) mkdocs gh-deploy --force
