--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -28,11 +28,23 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-matplotlib mkdocstrings-python python-dotenv requests pandas
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Enable caching
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
       - name: Setup Environment
         run: |
           echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" > .env
           cat .env
+
       - name: Deploy MkDocs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
