--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,15 @@ data = ["pandas", "requests"]
 
 [dependency-groups]
 dev = [
-    "dayplot",
     "dotenv>=0.9.9",
-    "mkdocs-material>=9.6.9",
+    "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
+    "ruff>=0.11.13",
     "mkdocs-matplotlib>=0.10.1",
+    "mkdocs-material>=9.6.9",
     "mkdocstrings-python>=1.16.5",
-    "pre-commit>=4.0.1",
-    "pytest>=8.3.4",
-    "ruff>=0.11.4",
+    "coverage>=7.9.1",
+    "genbadge>=1.1.2",
 ]
 
 [build-system]
