replace to yellow sunflower

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: dayplot
 site_url: https://example.com
-repo_url: https://github.com/JosephBARBIERDARNAL/dayplot
+repo_url: https://github.com/y-sunflower/dayplot
 
 theme:
   name: material
