legend documentation examples ok

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
       - tuto/basic-styling.md
       - tuto/negative-values.md
       - tuto/boxstyle.md
+      - tuto/legend.md
       - tuto/combine-charts.md
       - tuto/fetch-github-contribs.md
       - tuto/advanced.md
